# od-symbol

./: README.md  pyproject.toml
converter/: .gitignore  README.md  test.py
converter/converter/: cocoConverter.py  csvConverter.py  jsonConverter.py  kicad6Converter.py  kicadConverter.py  labelmeConverter.py  pascalVocConverter.py  pngConverter.py  rdfConverter.py  svgConverter.py
converter/core/: boundingbox.py  converter.py  engineeringGraph.py  geometry.py  renderer.py  symbol.py  utils.py
converter/symbols/: and.json  antenna.json  capacitor.adjustable.json  capacitor.polarized.json  capacitor.unpolarized.json  classes_ports.json  crossover.json  crystal.json  diac.json  diode.json  diode.light_emitting.json  diode.thyrector.json  diode.zener.json  explanatory.json  fuse.json  gnd.json  inductor.ferrite.json  inductor.json  integrated_circuit.ne555.json  integrated_circuit.voltage_regulator.json  junction.json  kicad_classes.json  lamp.json  motor.json  nand.json  nor.json  not.json  operational_amplifier.json  or.json  probe.current.json  probe.voltage.json  properties.json  rdf_classes.json  rdf_function_classes.json  resistor.adjustable.json  resistor.json  resistor.photo.json  speaker.json  switch.json  terminal.json  (+9 more)
data/: .gitignore
data/annotations/: 3233d615-21.xml  3233d615-24-0.xml  3233d615-24-5.xml  3233d615-24-6.xml  48c9152c-0-1.xml  48c9152c-0-2.xml  48c9152c-0-4.xml  48c9152c-0-6.xml  48c9152c-0-7.xml  8a23460a-1.xml  af51898d-10.xml  af51898d-15.xml  af51898d-18-0.xml  af51898d-18-4.xml  af51898d-18-5.xml  (+7 more)
extraction/: README.md
(+66 files in other folders)
